<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="2dp">

    <EditText
        android:id="@+id/caption_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_caption"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/caption_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_meme" />

    <ImageView
        android:id="@+id/captioned_meme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/created_meme" />

</LinearLayout>